<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:text="@string/app_name"
        android:textColor="@color/black_50_alpha"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_bg"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sys_info"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingLeft="50dp"
            android:text="@string/sys_info_address"
            android:textColor="@color/black_50_alpha"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="50dp"
            android:text="@string/sys_info_id"
            android:textColor="@color/black_50_alpha"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/sys_info_no_upgrade"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_red_selector"
            android:paddingBottom="15dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="15dp"
            android:text="@string/sys_info_upgrade"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/goback" />
</RelativeLayout>