<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.ticket.validation.terminal.custom.TVTextView
        android:id="@+id/title_img"
        style="@style/text_shadow_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/home_title_margin"
        android:text="@string/ticket_validation"
        android:textColor="@color/home_title_color"
        android:textSize="70sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tools_box"
        android:layout_marginBottom="90dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/validation_ticket_text"
            style="@style/text_small_shadow_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red_selector"
            android:gravity="center"
            android:paddingBottom="40dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="40dp"
            android:text="@string/recount_ticket"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/query_ticket_text"
            style="@style/text_small_shadow_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:background="@drawable/button_red_selector"
            android:gravity="center"
            android:paddingBottom="40dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="40dp"
            android:text="@string/query_ticket"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tools_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_text"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sys_exit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_empty_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/sys_exit"
            android:textColor="@color/black_70_alpha"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sys_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@drawable/button_empty_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/sys_info"
            android:textColor="@color/black_50_alpha"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@drawable/button_empty_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/paper_count"
            android:textColor="@color/black_50_alpha"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="天下票务@南山滑雪场"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>