<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:text="@string/app_name"
        android:textColor="@color/black_50_alpha"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/edit_box"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_sys_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@drawable/button_empty_selector"
            android:gravity="left"
            android:enabled="false"
            android:hint="@string/exit_sys_hint"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sys_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:background="@drawable/button_red_selector"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:text="@string/ok"
            android:textColor="@color/black_50_alpha"
            android:textSize="18sp" />
    </LinearLayout>


    <GridView
        android:id="@+id/grid_view"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_bg2"
        android:gravity="center"
        android:horizontalSpacing="3dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="4"
        android:padding="5dp"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp" />

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/goback" />
</RelativeLayout>