<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sys_bg_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/report_top_margin"
        android:paddingLeft="30dp"
        android:text="@string/app_name2"
        android:textColor="@color/black_50_alpha"
        android:textSize="@dimen/sys_info_title_size" />

    <LinearLayout
        android:layout_width="@dimen/report_limit_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/report_top2_margin"
        android:background="@drawable/border_bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/report_top3_margin"
        android:paddingLeft="40dp"
        android:paddingRight="30dp"
        android:paddingTop="@dimen/report_top3_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/report_title"
                android:textColor="@color/black"
                android:textSize="@dimen/sys_info_normal_text" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/red"
                android:textSize="@dimen/sys_info_normal_text" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/report_max_height"
            android:layout_marginTop="10dp">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="#00000000"
                android:divider="#00000000"
                android:dividerHeight="@dimen/report_bottom_margin"
                android:fadingEdge="none"
                android:fastScrollEnabled="false"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:listSelector="#00000000"
                android:overScrollMode="never"
                android:paddingRight="10dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/base_list_scrollbar_handle"
                android:smoothScrollbar="true" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/report_max_height"
                android:gravity="center"
                android:textColor="@color/black_60_alpha"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/loading_data_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/dialog_bg"
                android:padding="10dp"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/loading_data_progress_bar"
                    style="@style/progress_bar_style"

                    android:layout_centerVertical="true"
                    android:indeterminateDrawable="@anim/lib_loading_anim" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/loading_data_progress_bar"
                    android:paddingLeft="5dp"
                    android:text="@string/loading_data"
                    android:textColor="@color/white"
                    android:textSize="@dimen/progress_bar_text_size" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/print_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/report_top3_margin">

            <TextView
                style="@style/sys_info_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_red_selector"
                android:text="@string/report_sure"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/print_progress_bar_style"
                android:layout_centerVertical="true"
                android:indeterminateDrawable="@anim/lib_loading_anim" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/back_box"
        style="@style/go_back_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/goback" />
    </RelativeLayout>
</RelativeLayout>