<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/validation_width"
    android:layout_height="match_parent"
    android:background="#3B3B3B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/electronic_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/menu_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/menu_padding"
            android:paddingTop="@dimen/menu_padding">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_red_selector"
                android:padding="@dimen/validation_icon_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/epcdm" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/validation_code"
                android:textColor="@color/validation_text_color"
                android:textSize="@dimen/validation_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/qr_code_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/menu_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/menu_padding"
            android:paddingTop="@dimen/menu_padding">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_red_selector"
                android:padding="@dimen/validation_icon_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/qrcode" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/validation_qrcode"
                android:textColor="@color/validation_text_color"
                android:textSize="@dimen/validation_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/id_card_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/menu_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/menu_padding"
            android:paddingTop="@dimen/menu_padding">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_red_selector"
                android:padding="@dimen/validation_icon_padding">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="23dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/idcard" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/validation_ID"
                android:textColor="@color/validation_text_color"
                android:textSize="@dimen/validation_text_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:text="@string/validation_re_print"
            android:textColor="@color/white_50_alpha"
            android:textSize="@dimen/validation_re_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/goback" />
    </LinearLayout>

</RelativeLayout>